--- a/html/crear.html
+++ b/html/crear.html
@@ -55,7 +55,7 @@
           </div>
           <div class="grupo-boton">
             <button type="submit" id="enviar" class="btn btn-primary">Enviar</button>
-            <a href="/index.html" id="cancelar" class="btn btn-danger">Cancelar</a>
+            <a href="../index.html" id="cancelar" class="btn btn-danger">Cancelar</a>
           </div>
         </form>
       </div>
