--- a/html/editar.html
+++ b/html/editar.html
@@ -14,7 +14,7 @@
 <body>
   <header class="container-fluid">
     <div class="icono">
-      <a href="/index.html"> <p class='bx bx-home'></p></a>
+      <a href="../index.html"> <p class='bx bx-home'></p></a>
       <div class="texto">
         <p>volver a inicio</p>
       </div>
@@ -61,7 +61,7 @@
           </div>
           <div class="grupo-boton">
             <button type="submit" id="enviar" class="btn btn-primary">Enviar</button>
-            <a href="/index.html" id="cancelar" class="btn btn-danger">Cancelar</a>
+            <a href="../index.html" id="cancelar" class="btn btn-danger">Cancelar</a>
           </div>
         </form>
       </div>
