--- a/html/crear.html
+++ b/html/crear.html
@@ -15,7 +15,7 @@
 
   <header class="container-fluid">
     <div class="icono">
-      <a href="/index.html"> <p class='bx bx-home'></p></a>
+      <a href="../index.html"> <p class='bx bx-home'></p></a>
       <div class="texto">
         <p>volver a inicio</p>
       </div>
