--- a/html/eliminar.html
+++ b/html/eliminar.html
@@ -14,7 +14,7 @@
 <body>
   <header class="container-fluid">
     <div class="icono">
-      <a href="/index.html"> <p class='bx bx-home'></p></a>
+      <a href="../index.html"> <p class='bx bx-home'></p></a>
       <div class="texto">
         <p>volver a inicio</p>
       </div>
