--- a/html/crear.html
+++ b/html/crear.html
@@ -15,45 +15,65 @@
 
   <header class="container-fluid">
     <div class="icono">
-      <a href="../index.html"> <p class='bx bx-home'></p></a>
-      <div class="texto">
-        <p>volver a inicio</p>
-      </div>
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#"><h1>Crear Agente</h1></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item active ">
+              <a class="nav-link" href="#">Crear agente<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link" href="editar.html">Editar agente</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="eliminar.html">Borrar agente</a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link " href="mostrar.html">Mostrar agente</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
     </div>
-    <h1>Crear agente</h1>
   </header>
   <main>
-    <div class="formulario-fondo-crear">
-      <div class="formulario-crear">
+    <div class="formulario-fondo-crear ">
+      <div class="formulario-crear ">
         <form class="form-crear">
-          <div class="mb-3 datos">
+          <div class="mb-3 datos ">
             <h2>Introduce los datos del agente</h2>
           </div>
           <div class="mb-3 datos">
             <label for="name">Nombre:</label>
-            <input type="text" id="name">
+            <input type="text" class="form-control" id="name">
           </div>
           <div class="mb-3 datos">
             <label for="lore">Historia:</label>
-            <textarea id="lore"></textarea>
+            <textarea class="form-control" id="lore"></textarea>
           </div>
           <div class="mb-3 datos">
             <label for="ability1">Habilidad 1:</label>
-            <input type="text" id="ability1">
+            <input type="text" class="form-control" id="ability1">
           </div>
           <div class="mb-3 datos">
             <label for="ability2">Habilidad 2:</label>
-            <input type="text" id="ability2">
+            <input type="text" class="form-control" id="ability2">
           </div>
           <div class="mb-3 datos">
             <label for="ability3">Habilidad 3:</label>
-            <input type="text" id="ability3">
+            <input type="text" class="form-control" id="ability3">
           </div>
           <div class="mb-3 datos">
-            <label for="Definitiva">Definitiva:</label>
-            <input type="text" id="ultimate">
+            <label for="ultimate">Definitiva:</label>
+            <input type="text" class="form-control" id="ultimate">
           </div>
-          <div class="grupo-boton">
+          <div class="form-group grupo-boton">
             <button type="submit" id="enviar" class="btn btn-primary">Enviar</button>
             <a href="../index.html" id="cancelar" class="btn btn-danger">Cancelar</a>
           </div>
@@ -66,7 +86,7 @@
     </div>
   </main>
 
-  <footer>
+  <footer class="container-fluid">
     <p>&copy; 2023 Fernando Benítez-cano vargas</p>
     <p>Esto no es un producto oficial de Riot Games</p>
   </footer>
