--- a/html/eliminar.html
+++ b/html/eliminar.html
@@ -14,15 +14,35 @@
 <body>
   <header class="container-fluid">
     <div class="icono">
-      <a href="../index.html"> <p class='bx bx-home'></p></a>
-      <div class="texto">
-        <p>volver a inicio</p>
-      </div>
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#"><h1>Eliminar Agente</h1></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link" href="crear.html">Crear agente</a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link" href="editar.html">Editar agente</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Borrar agente<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link " href="mostrar.html">Mostrar agente</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
     </div>
-    <h1>Crear agente</h1>
   </header>
   <main>
-    <div class="formulario-fondo-editar">
+    <div class="formulario-fondo-editar col-12 col-sm-6 col-md-4 col-lg-6 col-xl-6">
       <div id="editar">
         <div class="mb-3">
           <h2>Selecciona el agente a eliminar</h2>
@@ -37,7 +57,7 @@
     </div>
   </main>
 
-  <footer>
+  <footer class="container-fluid">
     <p>&copy; 2023 Fernando Benítez-cano vargas</p>
     <p>Esto no es un producto oficial de Riot Games</p>
   </footer>
