--- a/html/mostrar.html
+++ b/html/mostrar.html
@@ -15,21 +15,39 @@
 
   <header class="container-fluid">
     <div class="icono">
-      <a href="../index.html"> <p class='bx bx-home'></p></a>
-      <div class="texto">
-        <p>volver a inicio</p>
-      </div>
-      
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#"><h1>Mostrar Agente</h1></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link" href="crear.html">Crear agente</a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link" href="editar.html">Editar agente</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="eliminar.html">Borrar agente</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link " href="#">Mostrar agente<span class="sr-only">(current)</span></a>
+            </li>
+          </ul>
+        </div>
+      </nav>
     </div>
-   
-    <h1>Agentes Disponibles</h1>
   </header>
   <main class="row contenido-mostrar">
 
  
   </main>
 
-  <footer>
+  <footer class="container-fluid">
     <p>&copy; 2023 Fernando Benítez-cano vargas</p>
     <p>Esto no es un producto oficial de Riot Games</p>
   </footer>
