--- a/index.html
+++ b/index.html
@@ -12,20 +12,47 @@
 
 <body>
 
+  
   <header class="container-fluid">
-    <h1>Valorant</h1>
+    <div class="icono">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#"><h1>Valorant</h1></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item  ">
+              <a class="nav-link" href="html/crear.html">Crear agente</a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link" href="html/editar.html">Editar agente</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="html/eliminar.html">Borrar agente</a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link " href="html/mostrar.html">Mostrar agente</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </header>
   <main>
-    <div class="formulario-fondo">
+    <div class="formulario-fondo col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
       <div class="formulario">
-        <form class="form">
-          <div class="mb-3">
+        <form>
+          <div class="mb-3s">
             <h2>¿Qué deseas hacer?</h2>
           </div>
           <div class="mb-3">
             
-              <input class="form-check-input" type="radio" name="opcion" value="mostrar" > 
-            <label class="form-check-label" >Ver todos los agentes</label>
+            <input class="form-check-input " type="radio" name="opcion" value="mostrar" > 
+            <label class="form-check-label " >Ver todos los agentes</label>
             <br>
            
               <input class="form-check-input" type="radio" name="opcion" value="crear">
@@ -54,7 +81,7 @@
     </div>
   </main>
 
-  <footer>
+  <footer class="container-fluid">
     <p>&copy; 2023 Fernando Benítez-cano vargas</p>
     <p>Esto no es un producto oficial de Riot Games</p>
   </footer>
