--- a/html/avisoEditar.html
+++ b/html/avisoEditar.html
@@ -5,50 +5,60 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="style.css">
-  <title>Valorant</title>
+  <link rel="stylesheet" href="../style.css">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <script src="../js/crear.js" type="module"></script>
+  <title>Confrimacion creacion</title>
 </head>
 
 <body>
 
-  
   <header class="container-fluid">
     <div class="icono">
       <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#"><h1>Valorant</h1></a>
+        <a class="navbar-brand" href="#"><h1>Crear Agente</h1></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item  ">
-              <a class="nav-link" href="html/crear.html">Crear agente</a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link" href="html/editar.html">Editar agente</a>
-            </li>
             <li class="nav-item">
-              <a class="nav-link" href="html/eliminar.html">Borrar agente</a>
+              <a class="nav-link" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link " href="html/mostrar.html">Mostrar agente</a>
+              <a class="nav-link" href="#">Crear agente<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link" href="editar.html">Editar agente</a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link" href="eliminar.html">Borrar agente</a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link" href="mostrar.html">Mostrar agente</a>
             </li>
           </ul>
         </div>
       </nav>
     </div>
   </header>
-  <main>
+  <main class="container-fluid">
+    <div class="fondo-mensaje ">
+        <h1>Campos</h1>
+        <h1>iguales</h1>
+        <div class="form-group grupo-boton">
+            <a href="../index.html" id="enviar" class="btn btn-danger">Cancelar</a>
+          </div>
+       
+
+    </div>
     <div class="imagenes">
-      <img class="omen" src="img/omen.png">
-      <img class="reyna" src="img/reyna.png">
+      <img src="../img/breach.png">
+      <img src="../img/raze.png">
     </div>
   </main>
 
-  <footer class="container-fluid ">
+  <footer class="container-fluid">
     <p>&copy; 2023 Fernando Benítez-cano vargas</p>
     <p>Esto no es un producto oficial de Riot Games</p>
   </footer>
@@ -57,4 +67,4 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
- </html>
+</html>
