--- a/html/crear.html
+++ b/html/crear.html
@@ -31,7 +31,7 @@
             <li class="nav-item ">
               <a class="nav-link" href="editar.html">Editar agente</a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="eliminar.html">Borrar agente</a>
             </li>
             <li class="nav-item ">
@@ -42,8 +42,8 @@
       </nav>
     </div>
   </header>
-  <main>
-    <div class="formulario-fondo-crear ">
+  <main class="container-fluid">
+    <div class="formulario-fondo-crear col-12 col-sm-12 col-md-10 col-lg-6 col-xl-6">
       <div class="formulario-crear ">
         <form class="form-crear">
           <div class="mb-3 datos ">
