--- a/html/eliminar.html
+++ b/html/eliminar.html
@@ -15,7 +15,7 @@
   <header class="container-fluid">
     <div class="icono">
       <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#"><h1>Eliminar Agente</h1></a>
+        <a class="navbar-brand" href="#"><h1>Borrar Agente</h1></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -41,7 +41,7 @@
       </nav>
     </div>
   </header>
-  <main>
+  <main class="container-fluid">
     <div class="formulario-fondo-editar col-12 col-sm-6 col-md-4 col-lg-6 col-xl-6">
       <div id="editar">
         <div class="mb-3">
