--- a/html/mostrar.html
+++ b/html/mostrar.html
@@ -16,7 +16,7 @@
   <header class="container-fluid">
     <div class="icono">
       <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#"><h1>Mostrar Agente</h1></a>
+        <a class="navbar-brand" href="#"><h1>Agentes disponibles</h1></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -45,7 +45,7 @@
   <main class="row contenido-mostrar">
 
  
-  </main>
+  </main class="container-fluid">
 
   <footer class="container-fluid">
     <p>&copy; 2023 Fernando Benítez-cano vargas</p>
